修改 社区首页

--- a/亲搭/亲搭/Community/CommunityCell.xib
+++ b/亲搭/亲搭/Community/CommunityCell.xib
@@ -15,24 +15,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="264" id="KGk-i7-Jjw" customClass="CommunityCell">
-            <rect key="frame" x="0.0" y="0.0" width="373" height="264"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="318" id="KGk-i7-Jjw" customClass="CommunityCell">
+            <rect key="frame" x="0.0" y="0.0" width="373" height="318"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="373" height="264"/>
+                <rect key="frame" x="0.0" y="0.0" width="373" height="318"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgT-ai-3EY">
-                        <rect key="frame" x="16" y="8" width="341" height="248"/>
+                        <rect key="frame" x="11" y="8" width="351" height="301.5"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="KED-8f-qxf">
-                                <rect key="frame" x="0.0" y="10" width="54" height="54"/>
+                                <rect key="frame" x="5" y="10" width="56" height="56"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="KED-8f-qxf" secondAttribute="height" id="Ydv-0p-XsW"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="会飞的鱼" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80g-G3-rVe">
-                                <rect key="frame" x="64" y="10" width="257" height="21"/>
+                                <rect key="frame" x="71" y="10" width="260" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="ObD-LI-rqE"/>
                                 </constraints>
@@ -41,19 +41,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="生死挈阔，与子成说：执子之手，与子偕老！" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzN-TB-lc4">
-                                <rect key="frame" x="64" y="41" width="204" height="21"/>
+                                <rect key="frame" x="71" y="41" width="210" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25分钟前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBS-5Z-1zE">
-                                <rect key="frame" x="64" y="145" width="72" height="21"/>
+                                <rect key="frame" x="71" y="198.5" width="72" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kgY-sK-4HV">
-                                <rect key="frame" x="276" y="145" width="20" height="20"/>
+                                <rect key="frame" x="286" y="198.5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="Jc9-Ay-6XQ"/>
                                     <constraint firstAttribute="height" constant="20" id="aLu-yL-Nrv"/>
@@ -64,7 +64,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ezw-PW-pbW">
-                                <rect key="frame" x="311" y="145" width="20" height="20"/>
+                                <rect key="frame" x="321" y="198.5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="i0H-Vx-MoM"/>
                                     <constraint firstAttribute="height" constant="20" id="jOl-Gy-M1L"/>
@@ -75,36 +75,49 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cst-Lc-OeY">
-                                <rect key="frame" x="64" y="176" width="247" height="62"/>
+                                <rect key="frame" x="66" y="229.5" width="260" height="62"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i啊扩大饭卡上fsf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ka1-Wf-cjC">
+                                        <rect key="frame" x="5" y="5" width="250" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="ka1-Wf-cjC" secondAttribute="trailing" constant="5" id="03Z-pg-2mB"/>
+                                    <constraint firstItem="ka1-Wf-cjC" firstAttribute="leading" secondItem="Cst-Lc-OeY" secondAttribute="leading" constant="5" id="OdO-Xa-uMn"/>
+                                    <constraint firstItem="ka1-Wf-cjC" firstAttribute="top" secondItem="Cst-Lc-OeY" secondAttribute="top" constant="5" id="Qt0-r9-eQU"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Ql-jq-mHN">
-                                <rect key="frame" x="64" y="72" width="204" height="63"/>
+                                <rect key="frame" x="71" y="72" width="210" height="116.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="80g-G3-rVe" secondAttribute="trailing" constant="20" id="2ML-lX-MHG"/>
-                            <constraint firstAttribute="trailing" secondItem="Cst-Lc-OeY" secondAttribute="trailing" constant="30" id="5Ld-kT-hsH"/>
+                            <constraint firstAttribute="trailing" secondItem="Cst-Lc-OeY" secondAttribute="trailing" constant="25" id="5Ld-kT-hsH"/>
                             <constraint firstItem="80g-G3-rVe" firstAttribute="top" secondItem="KED-8f-qxf" secondAttribute="top" id="6TI-jH-RF5"/>
-                            <constraint firstItem="Cst-Lc-OeY" firstAttribute="leading" secondItem="pBS-5Z-1zE" secondAttribute="leading" id="8PL-Zc-ACE"/>
+                            <constraint firstItem="Cst-Lc-OeY" firstAttribute="leading" secondItem="pBS-5Z-1zE" secondAttribute="leading" constant="-5" id="8PL-Zc-ACE"/>
                             <constraint firstItem="kgY-sK-4HV" firstAttribute="firstBaseline" secondItem="ezw-PW-pbW" secondAttribute="firstBaseline" id="8gj-dK-u7y"/>
                             <constraint firstItem="pBS-5Z-1zE" firstAttribute="leading" secondItem="7Ql-jq-mHN" secondAttribute="leading" id="9Jv-Wd-I2d"/>
                             <constraint firstItem="BzN-TB-lc4" firstAttribute="leading" secondItem="80g-G3-rVe" secondAttribute="leading" id="D9F-dW-MKE"/>
                             <constraint firstItem="KED-8f-qxf" firstAttribute="width" secondItem="qgT-ai-3EY" secondAttribute="width" multiplier="1:5" constant="-15" id="G2S-D4-C5w"/>
                             <constraint firstItem="Cst-Lc-OeY" firstAttribute="top" secondItem="pBS-5Z-1zE" secondAttribute="bottom" constant="10" id="G7P-fG-RdJ"/>
                             <constraint firstItem="ezw-PW-pbW" firstAttribute="baseline" secondItem="kgY-sK-4HV" secondAttribute="baseline" id="GO6-WQ-yTw"/>
+                            <constraint firstItem="pBS-5Z-1zE" firstAttribute="top" secondItem="7Ql-jq-mHN" secondAttribute="bottom" constant="10" id="GRE-MN-JdX"/>
                             <constraint firstItem="ezw-PW-pbW" firstAttribute="leading" secondItem="kgY-sK-4HV" secondAttribute="trailing" constant="15" id="GzJ-vb-13a"/>
                             <constraint firstItem="7Ql-jq-mHN" firstAttribute="top" secondItem="BzN-TB-lc4" secondAttribute="bottom" constant="10" id="Iwe-Cp-joE"/>
                             <constraint firstItem="BzN-TB-lc4" firstAttribute="top" secondItem="80g-G3-rVe" secondAttribute="bottom" constant="10" id="MU8-KP-C5S"/>
                             <constraint firstItem="ezw-PW-pbW" firstAttribute="centerY" secondItem="pBS-5Z-1zE" secondAttribute="centerY" id="PDy-jN-XQi"/>
                             <constraint firstItem="KED-8f-qxf" firstAttribute="top" secondItem="qgT-ai-3EY" secondAttribute="top" constant="10" id="Uai-xp-KGR"/>
-                            <constraint firstItem="pBS-5Z-1zE" firstAttribute="top" secondItem="7Ql-jq-mHN" secondAttribute="bottom" constant="10" id="b63-MD-NHR"/>
                             <constraint firstItem="80g-G3-rVe" firstAttribute="leading" secondItem="KED-8f-qxf" secondAttribute="trailing" constant="10" id="cWV-BW-g9H"/>
                             <constraint firstItem="BzN-TB-lc4" firstAttribute="width" secondItem="qgT-ai-3EY" secondAttribute="width" multiplier="3:5" id="dmp-4F-Sk8"/>
                             <constraint firstItem="7Ql-jq-mHN" firstAttribute="leading" secondItem="BzN-TB-lc4" secondAttribute="leading" id="h9h-y8-he3"/>
-                            <constraint firstItem="KED-8f-qxf" firstAttribute="leading" secondItem="qgT-ai-3EY" secondAttribute="leading" id="hIf-i7-ikv"/>
+                            <constraint firstItem="KED-8f-qxf" firstAttribute="leading" secondItem="qgT-ai-3EY" secondAttribute="leading" constant="5" id="hIf-i7-ikv"/>
                             <constraint firstAttribute="trailing" secondItem="80g-G3-rVe" secondAttribute="trailing" constant="20" id="hmJ-na-Bma"/>
                             <constraint firstAttribute="bottom" secondItem="Cst-Lc-OeY" secondAttribute="bottom" constant="10" id="lPe-aZ-TrS"/>
                             <constraint firstItem="7Ql-jq-mHN" firstAttribute="width" secondItem="BzN-TB-lc4" secondAttribute="width" id="o1h-Bi-EfP"/>
@@ -116,8 +129,8 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="qgT-ai-3EY" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Lss-oM-iVH"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="qgT-ai-3EY" secondAttribute="trailing" constant="8" id="UKN-tU-ZPH"/>
-                    <constraint firstItem="qgT-ai-3EY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="WqQ-qs-XQa"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="qgT-ai-3EY" secondAttribute="trailing" constant="3" id="UKN-tU-ZPH"/>
+                    <constraint firstItem="qgT-ai-3EY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="3" id="WqQ-qs-XQa"/>
                     <constraint firstItem="qgT-ai-3EY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="p5w-zF-U3Y"/>
                 </constraints>
             </tableViewCellContentView>
@@ -126,11 +139,12 @@
                 <outlet property="heartBtn" destination="kgY-sK-4HV" id="BFF-Hj-0F4"/>
                 <outlet property="imgsView" destination="7Ql-jq-mHN" id="2WO-0X-lhi"/>
                 <outlet property="nameLabel" destination="80g-G3-rVe" id="o33-GH-ry4"/>
+                <outlet property="receiveLabel" destination="ka1-Wf-cjC" id="iPg-vA-sPg"/>
                 <outlet property="receiveView" destination="Cst-Lc-OeY" id="oVQ-dI-XbO"/>
                 <outlet property="senderInfoLabel" destination="BzN-TB-lc4" id="oDr-KP-Zby"/>
                 <outlet property="timeLabel" destination="pBS-5Z-1zE" id="GfZ-q2-YLS"/>
             </connections>
-            <point key="canvasLocation" x="-225.5" y="32"/>
+            <point key="canvasLocation" x="-26" y="118"/>
         </tableViewCell>
     </objects>
     <resources>
